--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>ToDom</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -41,8 +41,8 @@
 				<td>
 					<i class="material-icons">delete</i>
 				</td>
-            </tr>
-            <tr>
+			</tr>
+			<tr>
 				<td>
 					<input type="checkbox">
 				</td>
@@ -52,8 +52,8 @@
 				<td>
 					<i class="material-icons">delete</i>
 				</td>
-            </tr>
-            <tr class="done">
+			</tr>
+			<tr class="done">
 				<td>
 					<input type="checkbox">
 				</td>
@@ -66,6 +66,7 @@
 			</tr>
 		</table>
 	</main>
+	<script src="assets/js/index.js"></script>
 </body>
 
 </html>
